[gd_scene load_steps=21 format=3 uid="uid://dja5sfxq1rgxl"]

[ext_resource type="Script" uid="uid://csuremlj0lw1a" path="res://scripts/dash_shadow.gd" id="1_53gw5"]
[ext_resource type="PackedScene" uid="uid://bkjsh3itjc877" path="res://scenes/other/DamageParticles.tscn" id="2_r15to"]
[ext_resource type="PackedScene" uid="uid://dnjh7yer2evms" path="res://scenes/other/detection_component.tscn" id="2_sfhix"]
[ext_resource type="PackedScene" uid="uid://dofngbvrqwqni" path="res://scenes/other/health_component.tscn" id="3_2krnx"]
[ext_resource type="PackedScene" uid="uid://cgyspg16rbl4q" path="res://scenes/other/death_light.tscn" id="3_xbrmd"]
[ext_resource type="PackedScene" uid="uid://boclr665vn6fm" path="res://scenes/other/loot_component.tscn" id="4_r15to"]
[ext_resource type="Script" uid="uid://fwwpsn2vg2g0" path="res://resources/loot_item.gd" id="5_xbrmd"]
[ext_resource type="PackedScene" uid="uid://dv8swrx0043i6" path="res://scenes/asset/memory_fragment.tscn" id="6_imeo8"]
[ext_resource type="PackedScene" uid="uid://bt8isq1pq1xna" path="res://scenes/other/sound_component.tscn" id="7_0hkmd"]
[ext_resource type="AudioStream" uid="uid://n1dxrlknm13u" path="res://assets/sfx/enemy/whoosh.wav" id="8_oqxfm"]
[ext_resource type="AudioStream" uid="uid://b4kp5xt14f4kd" path="res://assets/sfx/enemy/boom.mp3" id="9_y276j"]
[ext_resource type="AudioStream" uid="uid://cgpo6tvpujy6b" path="res://assets/sfx/player/dash.wav" id="11_xbrmd"]
[ext_resource type="AudioStream" uid="uid://lo2qijxtfgyq" path="res://assets/sfx/enemy/commit.wav" id="13_imeo8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fxwqn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aosgp"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_jes47"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4p7wp"]
radius = 30.0

[sub_resource type="SphereShape3D" id="SphereShape3D_xqppl"]
radius = 7.0

[sub_resource type="SphereShape3D" id="SphereShape3D_6dm4o"]
radius = 0.825561

[sub_resource type="Resource" id="Resource_r0kco"]
script = ExtResource("5_xbrmd")
item_scene = ExtResource("6_imeo8")
chance = 1.0
min_drop = 2
max_drop = 4
metadata/_custom_type_script = "uid://fwwpsn2vg2g0"

[node name="DashShadow" type="CharacterBody3D" node_paths=PackedStringArray("health_component", "detection_component", "loot_component", "chase_sound_component", "dash_sound_component", "death_sound_component", "hit_sound_component", "dash_commit_sound_component")]
collision_layer = 8
collision_mask = 13
script = ExtResource("1_53gw5")
health_component = NodePath("HealthComponent")
detection_component = NodePath("DetectionComponent")
loot_component = NodePath("LootComponent")
chase_sound_component = NodePath("ChaseSoundComponent")
dash_sound_component = NodePath("DashSoundComponent2")
death_sound_component = NodePath("DeathSoundComponent")
hit_sound_component = NodePath("HitSoundComponent")
dash_commit_sound_component = NodePath("DashCommitSoundComponent")
damage_particles = ExtResource("2_r15to")
death_light_scene = ExtResource("3_xbrmd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.45644, 0, 0, 0, 1.45644, 0, 0, 0, 1.45644, 0, 0, 0)
shape = SubResource("SphereShape3D_fxwqn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.46441, 0, 0, 0, 1.46441, 0, 0, 0, 1.46441, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_aosgp")
mesh = SubResource("SphereMesh_jes47")

[node name="DetectionComponent" parent="." node_paths=PackedStringArray("detection_area", "close_area", "owner_body") instance=ExtResource("2_sfhix")]
detection_area = NodePath("DetectionArea")
close_area = NodePath("CloseDetectionArea")
owner_body = NodePath("..")

[node name="DetectionArea" type="Area3D" parent="DetectionComponent"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionComponent/DetectionArea"]
shape = SubResource("SphereShape3D_4p7wp")

[node name="CloseDetectionArea" type="Area3D" parent="DetectionComponent"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionComponent/CloseDetectionArea"]
shape = SubResource("SphereShape3D_xqppl")

[node name="ShadowHitbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShadowHitbox"]
shape = SubResource("SphereShape3D_6dm4o")

[node name="HealthComponent" parent="." instance=ExtResource("3_2krnx")]
max_health = 250.0
invincibility_time = 0.0

[node name="Glow" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00469041, -4.76837e-07, -0.000295401)
light_color = Color(0.112407, 0.0923, 0.13, 1)
light_energy = 16.0
light_volumetric_fog_energy = 4.0
omni_range = 1.33
omni_attenuation = 0.7

[node name="LootComponent" parent="." instance=ExtResource("4_r15to")]
loot_table = Array[ExtResource("5_xbrmd")]([SubResource("Resource_r0kco")])
global_random_spread = 0.5

[node name="ChaseSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_0hkmd")]
player = NodePath("ChasePlayer")
min_pitch = 0.5
max_pitch = 0.8
min_volume = -20.0
max_volume = -15.0

[node name="ChasePlayer" type="AudioStreamPlayer3D" parent="ChaseSoundComponent"]
stream = ExtResource("8_oqxfm")
max_distance = 35.0

[node name="DashSoundComponent2" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_0hkmd")]
player = NodePath("DashPlayer")
min_pitch = 0.5
max_pitch = 0.8
max_volume = 10.0

[node name="DashPlayer" type="AudioStreamPlayer3D" parent="DashSoundComponent2"]
stream = ExtResource("11_xbrmd")
volume_db = 80.0
pitch_scale = 0.4

[node name="DeathSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_0hkmd")]
player = NodePath("DeathPlayer")
min_pitch = 1.4
max_pitch = 1.6
min_volume = 5.0
max_volume = 15.0

[node name="DeathPlayer" type="AudioStreamPlayer3D" parent="DeathSoundComponent"]
stream = ExtResource("8_oqxfm")
max_distance = 35.0

[node name="HitSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_0hkmd")]
player = NodePath("HitPlayer")
min_pitch = 0.7
max_pitch = 1.3

[node name="HitPlayer" type="AudioStreamPlayer3D" parent="HitSoundComponent"]
stream = ExtResource("9_y276j")
volume_db = 80.0
max_db = 6.0
max_distance = 35.0

[node name="DashCommitSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_0hkmd")]
player = NodePath("DashCommitPlayer")
min_pitch = 0.6
max_pitch = 0.6
min_volume = 40.0
max_volume = 40.0

[node name="DashCommitPlayer" type="AudioStreamPlayer3D" parent="DashCommitSoundComponent"]
stream = ExtResource("13_imeo8")
volume_db = 80.0
max_db = 6.0
pitch_scale = 0.5
max_distance = 35.0

[connection signal="damage_taken" from="HealthComponent" to="." method="_on_damage_taken"]
